--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 0 * * *"
   push:
     branches:
-      - master
+      - master_rosaany
     paths:
       - scripts/nike_sync.py
       - scripts/nike_to_strava_sync.py
